@@ -64,29 +64,28 @@
 
 package com.radixdlt.statecomputer;
 
-import com.radixdlt.application.system.NextValidatorSetEvent;
 import com.radixdlt.application.system.state.EpochData;
 import com.radixdlt.consensus.bft.BFTNode;
 import com.radixdlt.consensus.bft.BFTValidator;
 import com.radixdlt.consensus.bft.BFTValidatorSet;
+import com.radixdlt.constraintmachine.REEvent;
 import com.radixdlt.constraintmachine.REProcessedTxn;
 import com.radixdlt.engine.BatchVerifier;
 import com.radixdlt.engine.MetadataException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class EpochProofVerifierV2 implements BatchVerifier<LedgerAndBFTProof> {
   @Override
   public void testMetadata(LedgerAndBFTProof metadata, List<REProcessedTxn> txns)
       throws MetadataException {
-    NextValidatorSetEvent nextValidatorSetEvent = null;
+    REEvent.NextValidatorSetEvent nextValidatorSetEvent = null;
     for (int i = 0; i < txns.size(); i++) {
       var processed = txns.get(i);
       var nextEpochEvents =
           processed.getEvents().stream()
-              .filter(NextValidatorSetEvent.class::isInstance)
-              .map(NextValidatorSetEvent.class::cast)
-              .collect(Collectors.toList());
+              .filter(REEvent.NextValidatorSetEvent.class::isInstance)
+              .map(REEvent.NextValidatorSetEvent.class::cast)
+              .toList();
 
       if (!nextEpochEvents.isEmpty()) {
         // TODO: Move this check into Meter
@@ -122,7 +121,7 @@ public class EpochProofVerifierV2 implements BatchVerifier<LedgerAndBFTProof> {
       // TODO: Comparison of ordering as well
       var nextValidatorSet =
           nextValidatorSetEvent.nextValidators().stream()
-              .map(v -> BFTValidator.from(BFTNode.create(v.getValidatorKey()), v.getAmount()));
+              .map(v -> BFTValidator.from(BFTNode.create(v.validatorKey()), v.amount()));
       var bftValidatorSet = BFTValidatorSet.from(nextValidatorSet);
       if (!nextValidatorSetMaybe.orElseThrow().equals(bftValidatorSet)) {
         throw new MetadataException("Validator set computed does not match proof.");
